even more modal changes to get  images of all sizes appropriately in there

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -60,3 +60,7 @@ small {
   backdrop-filter: blur(4px) brightness(.5) contrast(.8);
   opacity: 1 !important;
 }
+
+.bg-blur {
+  backdrop-filter: blur(20px) brightness(.8) contrast(.8);
+}
