updates to styles of pages

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -1,5 +1,5 @@
-$body-bg: #f4f3e8;
-$body-bg-dark: #212e21;
+$body-bg: #faf9f7;
+$body-bg-dark: #1d1d1d;
 $theme-colors: (
   "primary": #0e6efd,
   "secondary": #aeb2b6,
@@ -26,6 +26,5 @@ $theme-colors: (
   "teal": $teal,
   "cyan":$cyan,
   // Custom colors
-  "codeworks": #141d2b,
-  "vue": #42b883,
+  "jazzy": #01fa60
 );
