--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -4,6 +4,7 @@
 
 body {
   transition: all .2s ease;
+  background-image: linear-gradient(180deg, var(--bs-jazzy) -115px, var(--bs-body-bg) 325px);
 }
 
 #app {
