lots of changes to the magic punk page

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -26,5 +26,10 @@ $theme-colors: (
   "teal": $teal,
   "cyan":$cyan,
   // Custom colors
-  "jazzy": #01fa60
+  "jazzy": #01fa60,
+  "magic-blue": #0197fb,
+  "magic-light-blue": #6abff8,
+  "magic-green": #59ffac,
+  "magic-pink": #fa96ff,
+  "magic-orange": #ffb259,
 );
