--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -4,7 +4,9 @@
 
 body {
   transition: all .2s ease;
-  background-image: linear-gradient(180deg, var(--bs-jazzy) -115px, var(--bs-body-bg) 325px);
+  background-image: var(--bg-style, linear-gradient(180deg, var(--bs-magic-blue) -115px, var(--bs-body-bg) 325px));
+  background-size: 100%;
+  background-repeat: no-repeat;
 }
 
 #app {
@@ -18,6 +20,7 @@ main {
   flex-grow: 1;
   display: flex;
   flex-direction: column;
+  overflow-x: hidden;
 }
 
 #pop-toast-container {
@@ -38,8 +41,14 @@ h1 {
 
 p {
   line-height: 1.5em;
-  font-size: 1.5rem;
+  font-size: 1.25rem;
   text-align: left;
+}
+
+@media (min-width: 768px) {
+  p {
+    font-size: 1.5rem;
+  }
 }
 
 small {
