updated the background images for magic punk

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -7,7 +7,7 @@ body {
   background-color: var(--bs-body-bg);
   position: relative;
   background-image: var(--bg-style, linear-gradient(180deg, var(--bs-magic-blue) -115px, var(--bs-body-bg) 325px));
-  background-size: 170% 800px;
+  background-size: 300%;
   background-position: top;
   background-repeat: no-repeat;
 }
